2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Recoded the human_time_description_raw
	function fixing bugs and improving exactly mode even years accuracy

2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/reporting/reporting_viewer.php
	godmode/reporting/reporting_builder.php: Improved period form in the
	report view and navegability merged from 4.0

2012-03-20 Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: added lost lines.

2012-03-20 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: now the function
	"html_print_input_text_extended" accept a script code as string for event
	"keyup" or as array where the index is string for each event where you want
	add javascript code. And make more pretty the page of report and cleaned
	source code style. 

	* include/functions_reporting.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/reporting_builder.php: changed the old method to order
	items in a report for the method with checks and move the block of items.

	* godmode/reporting/reporting_builder.preview.php: removed this file, now
	it use the html view in operation. 
	
	Merged from the branch pandora_4.0

2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.elements.php: Added
	advanced period select to the elements list in visual console

2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php
	operation/visual_console/public_console.php: Fixed the
	public visual console graphs adding homeurl

2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* operation/visual_console/render_view.php
	godmode/reporting/visual_console_builder.wizard.php
	godmode/reporting/visual_console_builder.php
	godmode/reporting/visual_console_builder.preview.php: Removed
	preview section from visual map in godmode. Now is a link
	to operation mode.