@@ -18,42 +18,12 @@
  * @subpackage Generic_Functions
  */
 
-/* Enterprise hook constant */
-define ('ENTERPRISE_NOT_HOOK', -1);
-
 /**
  * Include the html and ui functions. 
  */
 require_once ('functions_html.php');
 require_once ('functions_ui.php');
 require_once('functions_io.php');
-
-/* Events state constants */
-define ('EVENT_NEW', 0);
-define ('EVENT_VALIDATE', 1);
-define ('EVENT_PROCESS', 2);
-
-/* Agents disabled status */
-define ('AGENT_ENABLED',0);
-define ('AGENT_DISABLED',1);
-
-/* Error report codes */
-define ('ERR_GENERIC',-10000);
-
-define ('ERR_EXIST',-20000);
-
-define ('ERR_INCOMPLETE', -30000);
-
-define ('ERR_DB', -40000);
-
-define ('ERR_FILE', -50000);
-
-define ('ERR_NOCHANGES', -60000);
-
-/* Visual console constants */
-define("MIN_WIDTH",300);
-define("MIN_HEIGHT",120);
-define("MIN_WIDTH_CAPTION",420);
 
 function check_refererer() {
 	global $config;
@@ -1622,20 +1592,20 @@ function get_periods () {
 	$periods = array ();
 	
 	$periods[0] = __('custom');
-	$periods[300] = '5 '.__('minutes');
-	$periods[1800] = '30 '.__('minutes');
-	$periods[3600] = __('1 hour');
-	$periods[21600] = '6 '.__('hours');
-	$periods[43200] = '12 '.__('hours');
-	$periods[86400] = __('1 day');
-	$periods[604800] = __('1 week');
-	$periods[1296000] = __('15 days');
-	$periods[2592000] = '1 '.__('month');
-	$periods[7776000] = '3 '.__('months');
-	$periods[15552000] = '6 '.__('months');
-	$periods[31104000] = '1 '.__('year');
-	$periods[62208000] = '2 '.__('years');
-	$periods[93312000] = '3 '.__('years');
+	$periods[SECONDS_5MINUTES] = '5 '.__('minutes');
+	$periods[SECONDS_30MINUTES] = '30 '.__('minutes');
+	$periods[SECONDS_1HOUR] = __('1 hour');
+	$periods[SECONDS_6HOURS] = '6 '.__('hours');
+	$periods[SECONDS_12HOURS] = '12 '.__('hours');
+	$periods[SECONDS_1DAY] = __('1 day');
+	$periods[SECONDS_1WEEK] = __('1 week');
+	$periods[SECONDS_15DAYS] = __('15 days');
+	$periods[SECONDS_1MONTH] = '1 '.__('month');
+	$periods[SECONDS_3MONTHS] = '3 '.__('months');
+	$periods[SECONDS_6MONTHS] = '6 '.__('months');
+	$periods[SECONDS_1YEAR] = '1 '.__('year');
+	$periods[SECONDS_2YEARS] = '2 '.__('years');
+	$periods[SECONDS_3YEARS] = '3 '.__('years');
 	
 	return $periods;
 }
