@@ -1,3 +1,10 @@
+2012-03-21  Sergio Martin <sergio.martin@artica.es>
+
+	* include/config_process.php
+	include/functions.php
+	include/constants.php: Add a new include file
+	only for constants
+
 2012-03-20  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions.php: Recoded the human_time_description_raw
